<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="7dp"
    app:cardElevation="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F8E4CB">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/date_item"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#0000FF"
                android:id="@+id/date_item">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="5.5"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/title_item"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#FF0082"
                android:id="@+id/title_item">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_item"
                android:padding="6dp"
                android:text="@string/note_item"
                android:maxLines="2"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#3F9B06"
                android:id="@+id/note_item">

            </TextView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_btn"
                app:srcCompat="@drawable/ic_edit_black_24dp"
                android:padding="10dp"
                android:contentDescription="@string/edit_task_item"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/delete_btn"
                app:srcCompat="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/delete_task_item"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>