<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customAzure">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/operation_on_task"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_upd_title_design"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center
"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update_title"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp">
                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/empty_title"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/edt_title_upd"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update_note"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp">
                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/empty_note"
                        android:textColorHint="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:id="@+id/edt_note_upd"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/delete_task"
                        android:id="@+id/btn_delete_upd"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:background="@drawable/custom_upd_title_design"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/update_task"
                        android:id="@+id/btn_update_upd"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:background="@drawable/custom_upd_title_design"
                        />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cancel_task"
                    android:id="@+id/btn_cancel_upd"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/custom_upd_title_design"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>