<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customRed">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/save_your_daily_task"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_title_design"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center
"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_title"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp">
                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@android:color/white"
                        android:id="@+id/edt_title"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_note"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp">
                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@android:color/white"
                        android:id="@+id/edt_note"/>

                </RelativeLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cancel_task"
                    android:id="@+id/btn_cancel"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/save_btn_design"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save_task"
                android:id="@+id/btn_save"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/save_btn_design"
                />
            </RelativeLayout>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>